--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,7 +1,40 @@
+# https://honk.sigxcpu.org/projects/git-buildpackage/manual-html/gbp.intro.html#gbp.repository
+# GBP has several concepts with default matching git branch names:
+# Concept		Default branch	Contents
+# debian-branch		master		Source plus debian/*, maybe patches
+# upstream-branch	upstream	Pure source, maybe different from master
+# pristine-tar-branch	pristine-tar	A tarball and a control file
+# Just shoot me.
+
 [DEFAULT]
-debian-branch = debian
-pristine-tar = False
+cleaner = fakeroot debian/rules clean
+upstream-tree = BRANCH
+
+# Pedantic but consistent.
 upstream-branch = upstream
+debian-branch = debian
+
+# HEAD doesn't line up right with this technique so suppress the check.
+# With this turned off it will build from any branch.
+ignore-branch = true
+
+# ignore-new is helpful during trial-and-error development of this gbp.conf.
+ignore-new = True
+
+# Just stay far away from source, although the create-orig is ignored...
+create-orig = False
+pristine-tar = False
 
 [buildpackage]
-upstream-tree = BRANCH
+# Override default that tries to do source, etc
+builder=debuild -b -i -uc -us
+
+# export and export-dir happens before the prebuild hook, where it would be
+# nice do any merge.  "WC" is magic for "working copy", man gbp-buildpackage.
+export-dir=/tmp/gbp4hpe
+export=WC
+
+# For gbp-buildpackage-rpm
+
+spec-file = nvml.spec
+# packaging-dir = ???
